--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="word-frequency">
-                <h3>Word Frequency</h3>
+                <h3>Word Frequency - Top 6</h3>
                 <div id="word-frequency-list"></div>
             </div>
         </div>
