Improve text processing: better handling of punctuation and sentence endings

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Text Analysis Tool</h1>
         <div class="input-section">
-            <textarea id="text-input" placeholder="Type or paste your text here..."></textarea>
+            <textarea id="text-input" placeholder="An alle PLer: Type or paste your text here..."></textarea>
         </div>
         <div class="stats-section">
             <div class="stats-grid">
